--- a/odoo-custom-addons/kin_account/views/account_view.xml
+++ b/odoo-custom-addons/kin_account/views/account_view.xml
@@ -110,6 +110,18 @@
                      <attribute name="groups" >kin_account.group_show_product_field_invoice</attribute>
                 </field>
 
+                  <xpath expr="//field[@name='line_ids']/tree/field[@name='account_id']" position="attributes">
+                     <attribute name="options">{'no_open':True,'no_create':True}</attribute>
+                </xpath>
+
+                <xpath expr="//field[@name='line_ids']/tree/field[@name='partner_id']" position="attributes">
+                     <attribute name="options">{'no_open':True,'no_create':True}</attribute>
+                </xpath>
+
+                <xpath expr="//field[@name='line_ids']/tree/field[@name='tax_tag_ids']" position="attributes">
+                     <attribute name="options">{'no_open':True,'no_create':True}</attribute>
+                </xpath>
+
                  <field name="analytic_account_id" position="attributes"  >
                     <attribute name="options">{'no_open':True,'no_create':True}</attribute>
                 </field>
@@ -117,6 +129,7 @@
                  <field name="analytic_tag_ids" position="attributes"  >
                     <attribute name="options">{'no_open':True,'no_create':True}</attribute>
                 </field>
+
 
 
                  <page id="aml_tab" position="attributes" >
