--- a/odoo-custom-addons/kin_loading/views/loading_view.xml
+++ b/odoo-custom-addons/kin_loading/views/loading_view.xml
@@ -728,6 +728,7 @@
                                     <field name="fiscal_position_id" options="{'no_create': True}"/>
                                     <field name="analytic_account_id" context="{'default_partner_id':partner_invoice_id, 'default_name':name}" attrs="{'readonly': [('invoice_count','!=',0),('state','=','sale')]}" groups="analytic.group_analytic_accounting" force_save="1"/>
                                     <field name="invoice_status" states="sale,done" groups="base.group_no_one"/>
+                                    <field name="is_other_sale" readonly="1" />
                                 </group>
                             </group>
                             <group>
@@ -775,8 +776,8 @@
             <field name="res_model">sale.order</field>
             <field name="view_mode">tree,kanban,form,calendar,pivot,graph,activity</field>
             <field name="search_view_id" ref="sale.sale_order_view_search_inherit_sale"/>
-            <field name="context">{}</field>
-<!--            <field name="domain">[('state', 'not in', ('draft', 'sent', 'cancel'))]</field>-->
+            <field name="context">{'default_is_other_sale':True}</field>
+            <field name="domain">[('is_other_sale', '=', True)]</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
                     Create a new quotation, the first step of a new sale!
